--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
           local-dir: ./
           server-dir: /dishpedia.aureliusivan.my.id/
           args: --delete
-
+          env-file: ${{ secrets.ENV_FILE }}
       - name: Restart web server
         run: echo "Web server restarted"
