--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
+DB_HOST=localhost:3306
+# DB_PORT=3306
 DB_DATABASE=aurelius_dishpedia
-DB_USERNAME=aurelius_dishpedia
+DB_USERNAME=aurelius_aurelius
 DB_PASSWORD=Dishpediajaya
 
 BROADCAST_DRIVER=log
